[package]
name = "p2psns"
version = "0.1.0"
authors = ["JackAT <magikku009@hotmail.co.jp>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.5", features = ["image"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.0"

